--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VUE_APP_PATH_API = http://127.0.0.1:3000/api/
+VUE_APP_PATH_API = http://localhost:3002/api/
 PORT = 9990
 KEY = FJ0EpQWFuQstCGk1zcZB3gyjmn/7L6fMhwus9wAiWjU
