--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
-    "sweetalert2": "^11.10.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
-    "vue-sweetalert2": "^5.0.5"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
