--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
-
     "sweetalert2": "^11.10.4",
-
-
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5"
