--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@floating-ui/vue": "^1.0.6",
     "animate.css": "^4.1.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "floating-vue": "^5.2.2",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.4",
     "vue": "^3.2.13",
